--- a/views/layout.njk
+++ b/views/layout.njk
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>{% block title %}Services Dashboard{% endblock %}</title>
 </head>
 <body>
