--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -16,8 +16,7 @@
 {% endblock %}
 
 {% block right %}
-    <h2>Welcome to the Main Content Area</h2>
-    <p>This is where your main content will be displayed.</p>
+    <h2>Services</h2>
    {% for document in documents %}
       <div class="table-title-1">Project: {{ document.name }}</div>
       <table>
@@ -39,7 +38,7 @@
                <!-- 3 Columns (Git info)-->
                <td>{{ document.gitInfo.lang }}</td>
                <td>{{ document.gitInfo.lastRelease.version }}</td>
-               <td>{{ document.gitInfo.lastRelease.date | date('YYYY-MM-DD') }}</td>
+               <td><span>{{ document.gitInfo.lastRelease.date | date('YYYY-MM-DD') }}</span> <span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
 
                <!-- 4 Columns (sonar Metrics) -->
                <td>{{ document.sonarMetrics.coverage }}</td>
@@ -54,25 +53,79 @@
          <tr>
                <th>Version</th>
                <th>Last BOM Import</th>
-               <th>Critical</th>
+               <th></th>
+               <th></th>
+               <th></th>
+               <th></th>
+               <th></th>
+               <th></th>
+               <!--th>Critical</th>
                <th>High</th>
                <th>Medium</th>
                <th>Low</th>
                <th>Vulnerabilities</th>
-               <th>Components</th>
+               <th>Components</th-->
          </tr>
 
          <!-- Iterate over each version entry in versions array -->
          {% for version in document.versions %}
          <tr>
                <td>{{ version.version }}</td>
-               <td>{{ version.lastBomImport | date('YYYY-MM-DD') }}</td>
-               <td>{{ version.metrics.critical }}</td>
-               <td>{{ version.metrics.high }}</td>
-               <td>{{ version.metrics.medium }}</td>
-               <td>{{ version.metrics.low }}</td>
-               <td>{{ version.metrics.vulnerabilities }}</td>
-               <td>{{ version.metrics.components }}</td>
+               <td><span>{{ version.lastBomImport | date('YYYY-MM-DD')}}</span> <span class="days-ago">({{ version.lastBomImport | daysAgo }})</span></td>
+               <td>
+                  {% if version.metrics.critical != 0 %}
+                     <div class="rounded-number metric-critical-back">
+                  {% else %}
+                     <div class="front-number metric-critical-front">
+                  {% endif %}
+                        <span title="critical">{{ version.metrics.critical }}</span>
+                     </div>
+               </td>
+               <td>
+                  {% if version.metrics.high != 0 %}
+                     <div class="rounded-number metric-high-back">
+                  {% else %}
+                     <div class="front-number metric-high-front">
+                  {% endif %}
+                        <span title="high">{{ version.metrics.high }}</span>
+                     </div>
+               </td>
+               <td>
+                  {% if version.metrics.medium != 0 %}
+                     <div class="rounded-number metric-medium-back">
+                  {% else %}
+                     <div class="front-number metric-medium-front">
+                  {% endif %}
+                        <span title="medium">{{ version.metrics.medium }}</span>
+                     </div>
+               </td>
+               <td>
+                  {% if version.metrics.low != 0 %}
+                     <div class="rounded-number metric-low-back">
+                  {% else %}
+                     <div class="front-number metric-low-front">
+                  {% endif %}
+                        <span title="low">{{ version.metrics.low }}</span>
+                     </div>
+               </td>
+               <td>
+                  {% if version.metrics.vulnerabilities != 0 %}
+                     <div class="rounded-number metric-vulnerabilities-back">
+                  {% else %}
+                     <div class="front-number metric-vulnerabilities-front">
+                  {% endif %}
+                        <span title="vulnerabilities">{{ version.metrics.vulnerabilities }}</span>
+                     </div>
+               </td>
+               <td>
+                  {% if version.metrics.components != 0 %}
+                     <div class="rounded-number metric-components-back">
+                  {% else %}
+                     <div class="front-number metric-components-front">
+                  {% endif %}
+                        <span title="components">{{ version.metrics.components }}</span>
+                     </div>
+               </td>
          </tr>
          {% endfor %}
       </table>
