--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -16,114 +16,117 @@
 {% endblock %}
 
 {% block right %}
-    <h2>Services</h2>
-   <table id="table-services">
-      <thead>
-      <!-- Headers for Table -->
-      <tr>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Service") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Lang") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Last Version") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Date") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Coverage") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Bugs") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Code smell") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Vulnerabilities") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("Last BOM Import") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-            <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-      </thead>
-      <tbody>
-      </tr>
-      {% for document in documents %}
-         <!-- Iterate over each version entry in versions array -->
-         {% for version in document.versions %}
-            <tr>
-                  <!-- 1st Column (link) -->
-                  <td><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
-
-                  <!-- 3 Columns (Git info)-->
-                  <td>{{ document.gitInfo.lang }}</td>
-                  <td>{{ document.gitInfo.lastRelease.version }}</td>
-                  <td><span>{{ document.gitInfo.lastRelease.date | date('YYYY-MM-DD') }}</span> <span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
-
-                  <!-- 4 Columns (sonar Metrics) -->
-                  <td>{{ document.sonarMetrics.coverage }}</td>
-                  <td>{{ document.sonarMetrics.bugs }}</td>
-                  <td>{{ document.sonarMetrics.code_smells }}</td>
-                  <td>{{ document.sonarMetrics.vulnerabilities }}</td>
-
-                  <!-- 8 Columns (Version specific) -->
-                  <td>{{ version.version }}</td>
-                  <td><span>{{ version.lastBomImport | date('YYYY-MM-DD')}}</span> <span class="days-ago">({{ version.lastBomImport | daysAgo }})</span></td>
-                  <td>
-                     {% if version.metrics.critical != 0 %}
-                        <div class="rounded-number metric-critical-back">
-                     {% else %}
-                        <div class="front-number metric-critical-front">
-                     {% endif %}
-                           <span title="critical">{{ version.metrics.critical }}</span>
-                        </div>
-                  </td>
-                  <td>
-                     {% if version.metrics.high != 0 %}
-                        <div class="rounded-number metric-high-back">
-                     {% else %}
-                        <div class="front-number metric-high-front">
-                     {% endif %}
-                           <span title="high">{{ version.metrics.high }}</span>
-                        </div>
-                  </td>
-                  <td>
-                     {% if version.metrics.medium != 0 %}
-                        <div class="rounded-number metric-medium-back">
-                     {% else %}
-                        <div class="front-number metric-medium-front">
-                     {% endif %}
-                           <span title="medium">{{ version.metrics.medium }}</span>
-                        </div>
-                  </td>
-                  <td>
-                     {% if version.metrics.low != 0 %}
-                        <div class="rounded-number metric-low-back">
-                     {% else %}
-                        <div class="front-number metric-low-front">
-                     {% endif %}
-                           <span title="low">{{ version.metrics.low }}</span>
-                        </div>
-                  </td>
-                  <td>
-                     {% if version.metrics.vulnerabilities != 0 %}
-                        <div class="rounded-number metric-vulnerabilities-back">
-                     {% else %}
-                        <div class="front-number metric-vulnerabilities-front">
-                     {% endif %}
-                           <span title="vulnerabilities">{{ version.metrics.vulnerabilities }}</span>
-                        </div>
-                  </td>
-                  <td>
-                     {% if version.metrics.components != 0 %}
-                        <div class="rounded-number metric-components-back">
-                     {% else %}
-                        <div class="front-number metric-components-front">
-                     {% endif %}
-                           <span title="components">{{ version.metrics.components }}</span>
-                        </div>
-                  </td>
+   <h2>Services</h2>
+   <div class="table-services-container">
+      <table id="table-services">
+         <thead>
+         <!-- Headers for Table -->
+         <tr>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Service") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Lang") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Last Version") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Date") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Coverage") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Bugs") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Code smell") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Vulnerabilities") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Last BOM Import") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+         </thead>
+         <tbody>
          </tr>
+         {% for document in documents %}
+            <!-- Iterate over each version entry in versions array -->
+            {% for version in document.versions %}
+               <tr>
+                     <!-- 1st Column (link) -->
+                     <td><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
+
+                     <!-- 3 Columns (Git info)-->
+                     <td>{{ document.gitInfo.lang }}</td>
+                     <td>{{ document.gitInfo.lastRelease.version }}</td>
+                     <td><span>{{ document.gitInfo.lastRelease.date | date('YYYY-MM-DD') }}</span><br><span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
+
+                     <!-- 4 Columns (sonar Metrics) -->
+                     <td>{{ document.sonarMetrics.coverage }}</td>
+                     <td>{{ document.sonarMetrics.bugs }}</td>
+                     <td>{{ document.sonarMetrics.code_smells }}</td>
+                     <td>{{ document.sonarMetrics.vulnerabilities }}</td>
+
+                     <!-- 8 Columns (Version specific) -->
+                     <td>{{ version.version }}</td>
+                     <td><span>{{ version.lastBomImport | date('YYYY-MM-DD')}}</span><br><span class="days-ago">({{ version.lastBomImport | daysAgo }})</span></td>
+                     <td>
+                        {% if version.metrics.critical != 0 %}
+                           <div class="rounded-number metric-critical-back">
+                        {% else %}
+                           <div class="front-number metric-critical-front">
+                        {% endif %}
+                              <span title="critical">{{ version.metrics.critical }}</span>
+                           </div>
+                     </td>
+                     <td>
+                        {% if version.metrics.high != 0 %}
+                           <div class="rounded-number metric-high-back">
+                        {% else %}
+                           <div class="front-number metric-high-front">
+                        {% endif %}
+                              <span title="high">{{ version.metrics.high }}</span>
+                           </div>
+                     </td>
+                     <td>
+                        {% if version.metrics.medium != 0 %}
+                           <div class="rounded-number metric-medium-back">
+                        {% else %}
+                           <div class="front-number metric-medium-front">
+                        {% endif %}
+                              <span title="medium">{{ version.metrics.medium }}</span>
+                           </div>
+                     </td>
+                     <td>
+                        {% if version.metrics.low != 0 %}
+                           <div class="rounded-number metric-low-back">
+                        {% else %}
+                           <div class="front-number metric-low-front">
+                        {% endif %}
+                              <span title="low">{{ version.metrics.low }}</span>
+                           </div>
+                     </td>
+                     <td>
+                        {% if version.metrics.vulnerabilities != 0 %}
+                           <div class="rounded-number metric-vulnerabilities-back">
+                        {% else %}
+                           <div class="front-number metric-vulnerabilities-front">
+                        {% endif %}
+                              <span title="vulnerabilities">{{ version.metrics.vulnerabilities }}</span>
+                           </div>
+                     </td>
+                     <td>
+                        {% if version.metrics.components != 0 %}
+                           <div class="rounded-number metric-components-back">
+                        {% else %}
+                           <div class="front-number metric-components-front">
+                        {% endif %}
+                              <span title="components">{{ version.metrics.components }}</span>
+                           </div>
+                     </td>
+            </tr>
+            {% endfor %}
          {% endfor %}
-      {% endfor %}
-      </tbody>
-   </table>
+         </tbody>
+      </table>
+   </div>
 {% endblock %}
 
 {% macro sortable_header(column_title) %}
    <span class="column-sort" data-order="asc">▲</span>
    <span class="column-sort" dta-order="desc">▼</span>
-   <p></p>
+   <br>
    {{column_title}}
 {% endmacro %}
