--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,52 +3,57 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     font-family: Arial, sans-serif;
+}
+header, footer  {
+   background-color: #333;
+   color: white;
+   text-align: center;
+   padding: 10px 0;
+   flex-shrink: 0;
+}
+
+footer  {
+   flex-shrink: 0;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+   display: flex;
+   flex: 1;
+   overflow: hidden;
 }
 
-.top {
+.menu {
     background-color: #f4f4f4;
-    padding: 20px;
-    text-align: center;
+    width: 18%;
+    min-width: 100px;
+    overflow:  auto;
+    padding: 10px;
+    box-sizing: border-box;
+    flex-shrink: 0;
 }
 
-.bottom {
-    display: flex;
-    flex: 1;
+      .menu  div {
+         margin-bottom: 10px;
+      }
+      .menu  div > div {
+         margin-left: 20px;
+      }
+
+.content {
+   background-color: #e9e9e9;
+   width: 82%;
+   overflow:  auto;
+   padding: 10px;
+   box-sizing: border-box;
 }
 
-.left {
-    width: 20%;
-    background-color: #333;
-    color: white;
-    padding: 20px;
-}
 
-.left ul {
-    list-style-type: none;
-    padding: 0;
-}
 
-.left ul li {
-    margin-bottom: 10px;
-}
 
-.left ul li a {
-    color: white;
-    text-decoration: none;
-}
 
-.right {
-    flex: 1;
-    padding: 20px;
-    background-color: #f4f4f4;
-}
 
 .table-services-container {
    width: 100%; /* Adjust the width as necessary */
@@ -63,16 +68,6 @@ body, html {
    /* margin-bottom: 20px;  */  /* <--- remove --*/
 }
 
-/*
-table, th, td {
-   border: 1px solid black;
-}
-
-th, td {
-   padding: 8px;
-   text-align: left;
-}
-*/
  thead th {
    position: sticky;
    top: 0;
