--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -34,19 +34,19 @@
                <th data-column="service-name" data-type="string"> {{ sortable_header("Service") }}</th>
                <th data-column="service-name" data-type="string"> {{ sortable_header("Lang") }}</th>
                <th data-column="service-name" data-type="string"> {{ sortable_header("Last Version") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("Date") }}</th>
+               <th data-column="service-name" data-type="date">   {{ sortable_header("Date") }}</th>
                <th data-column="service-name" data-type="string"> {{ sortable_header("Coverage") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("Bugs") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("Code smell") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("Vulnerabilities") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("Last BOM Import") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
-               <th data-column="service-name" data-type="string"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("Bugs") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("Code smell") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("Vulnerabilities") }}</th>
+               <th data-column="service-name" data-type="string"> {{ sortable_header("Version") }}</th>
+               <th data-column="service-name" data-type="date">   {{ sortable_header("Last BOM Import") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("") }}</th>
+               <th data-column="service-name" data-type="number"> {{ sortable_header("") }}</th>
          </thead>
          <tbody>
          </tr>
