--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,25 +15,32 @@ header, footer  {
    flex-shrink: 0;
 }
 
-footer  {
-   flex-shrink: 0;
-}
-
 .container {
    display: flex;
    flex: 1;
    overflow: hidden;
 }
 
+
 .menu {
-    background-color: #f4f4f4;
-    width: 18%;
-    min-width: 100px;
-    overflow:  auto;
-    padding: 10px;
-    box-sizing: border-box;
-    flex-shrink: 0;
+   background-color: #f4f4f4;
+   width: 18%;
+   min-width: 100px;
+   overflow: auto;
+   padding: 10px;
+   box-sizing: border-box;
+   flex-shrink: 0;
+   position: relative;
 }
+
+      .sticky-header {
+         position: sticky;
+         top: 0;
+         background-color: #f4f4f4;
+         padding-bottom: 10px;
+         z-index: 10;
+      }
+
 
       .menu  div {
          margin-bottom: 10px;
