--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/css/styles.css">
-      <title>{% block title %}Services Dashboard{% endblock %}</title>
-      <script src="/js/utils.js"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!--[if !IE 8]><!-->
+   <link rel="stylesheet" type="text/css" media="all" href="//{{CDN_HOST}}/stylesheets/govuk-frontend/v4.6.0/govuk-frontend-4.6.0.min.css" />
+   <link rel="stylesheet" type="text/css" media="all" href="//{{CDN_HOST}}/stylesheets/services/overseas-entities/application.css"  />
+   <!--<![endif]-->
+   <link rel="stylesheet" href="/css/styles.css">
+   <title>{% block title %}Services Dashboard{% endblock %}</title>
+   <script src="/js/utils.js"></script>
 </head>
 <body>
    <header>
